--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.2",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
