--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.2",
     "element-plus": "^2.4.2",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
